# evaluation-calibration-core

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  FORMULAS.md  INTEGRATION_GUIDE.md  RELEASE_NOTES_0.1.1.md
eval_calibration_core/: __init__.py  cli.py  contracts.py  version.py
eval_calibration_core/io/: __init__.py  fixtures.py  packet_reader.py
eval_calibration_core/metrics/: __init__.py  compute.py  definitions.py
eval_calibration_core/report/: __init__.py  builder.py  model.py  writer.py
eval_calibration_core/suites/: __init__.py  determinism.py  guard_pressure.py  invariants.py  smoke.py
tests/: test_contract_compat.py  test_invariant_ci_0_workflow_hygiene.py  test_invariant_schema_pin_minor_2.py  test_invariant_version_single_source.py  test_invariants.py  test_metrics_smoke.py  test_packet_reader.py  test_pkg_1_no_examples_packaged.py  test_report_builder_smoke.py  test_report_contract_matrix.py
